Classes de extensao e organizacao

--- a/Fina.Api/appsettings.json
+++ b/Fina.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-QOQKFST;Database=fina;Integrated Security = True;Connect Timeout = 15;Encrypt=False;Application Intent = ReadWrite;Multi Subnet Failover=False;",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
