--- a/Fina.Api/appsettings.json
+++ b/Fina.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
+  "FrontendUrl": "http://localhost:5123",
+  "BackendUrl": "http://localhost:5073",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-QOQKFST;Database=fina;Integrated Security = True;Connect Timeout = 15;Encrypt=False;Application Intent = ReadWrite;Multi Subnet Failover=False;",
+    "DefaultConnection": "Data Source=DESKTOP-QOQKFST;Database=fina;Integrated Security = True;Connect Timeout = 15;Encrypt=False;Application Intent = ReadWrite;Multi Subnet Failover=False;"
   },
   "Logging": {
     "LogLevel": {
