--- a/Fina.Web/Fina.Web.csproj
+++ b/Fina.Web/Fina.Web.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\GetAll.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
@@ -20,6 +24,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fina.Core\Fina.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\GetAll.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\GetAll.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Categories\GetAll.razor" />
   </ItemGroup>
 
 </Project>
